# termyoutube-listener

./: .gitignore  CLAUDE.md  Cargo.toml  README-gui.md  README-tui.md  README.md  build.rs
assets/sprites/: bangboo.json  bina.json  chubby.json  dodoco.json  ica.json  none.json  nyan.json  pacman.json
packaging/linux/: ytmtui-gui.desktop
scripts/: install-linux-desktop.sh
src/: app.rs  audio.rs  captions.rs  clipboard.rs  config.rs  gui.rs  lib.rs  library.rs  local_scan.rs  main.rs  mpris.rs  player.rs  playlist.rs  probe.rs  sprites.rs  stats.rs  ui.rs  ytdlp.rs
ui/: main.slint
