[package]
name = "ytmtui"
version = "0.1.0"
edition = "2021"
description = "Minimal terminal-based YouTube Music player"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
